# MC-DLSSFG

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  build.gradle.kts  gradle.properties  gradlew.bat  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_en.yml
.github/scripts/: find_latest_changelog.py
.github/workflows/: Build_and_Upload.yml  build_native.yml  gradle.yml  sync_to_cnb.yml
buildSrc/: build.gradle.kts
buildSrc/src/main/groovy/utils/: CurseForgeUploader.groovy  JarJar.groovy  MinecraftVersion.groovy  ModrinthUploader.groovy
buildSrc/src/main/kotlin/: multiloader-common.gradle.kts  multiloader-loader.gradle.kts  multiversion-neoform.gradle.kts  multiversion.gradle.kts
buildSrc/src/main/kotlin/multiversion/: BasePlatformConfig.kt  CommonConfig.kt  Dependencies.kt  Dependency.kt  FabricPlatformConfig.kt  ForgePlatformConfig.kt  NeoForgePlatformConfig.kt  VersionConfig.kt
buildSrc/src/test/groovy/utils/: CurseForgeUploaderTest.groovy
changelogs/: 0.5.0-alpha.2.md  0.6.0-alpha.1.md  0.6.1-alpha.1.md  0.6.2-alpha.1.md  0.7.0-alpha.1.md  0.7.0-alpha.2.md  0.7.0-alpha.3.md  0.7.1-alpha.1.md  0.7.1-alpha.2.md  0.7.1-alpha.3.md  0.8.0-alpha.1.md  0.8.1-alpha.1.md  0.8.2-alpha.1.md  0.8.3-alpha.1.md  0.8.3-alpha.2.md  0.8.3-alpha.3.md  0.8.3-alpha.4.md  0.8.3-alpha.5.md
common/: build.gradle.kts
common/src/hack/resources/: mcdlssg.hack.mixins.json
common/src/irisapi/java/io/homo/irisapi/: CompositeRendererAccessorImpl_After1201.java  ICompositeRendererAccessor.java  IrisAPI.java  IrisCompositePassRenderingEvent.java  IrisCompositePassType.java  IrisCompositeRenderingPhase.java  IrisReflectionUtils.java  MacroRegistrationEvent.java  MacroRegistry.java  NamedCompositePass.java  PassEventHandler.java  ShaderPackLifecycleEvents.java  UniformRegistrationEvent.java  UniformRegistry.java
common/src/irisapi/java/io/homo/irisapi/handlers/: IrisRenderingPipelineHandler.java
common/src/irisapi/java/io/homo/irisapi/mixin/: IrisAPIMixinPlugin.java
common/src/irisapi/resources/: mcdlssg_irisapi.mixins.json
common/src/main/java/com/dgtdi/mcdlssg/api/: AbstractAlgorithm.java  InitializationDescription.java  InputResourceSet.java  MCDLSSGAPI.java  QualityPreset.java
common/src/main/resources/: mcdlssg.mixins.json  pack.mcmeta
common/src/main/resources/assets/mcdlssg/font/: MaterialSymbolsRounded400.codepoints
common/src/main/resources/assets/mcdlssg/lang/: en_us.json  ja_jp.json  zh_cn.json  zh_tw.json
common/src/main/resources/licenses/: ffxfsr.txt  fsr2v221.txt  ngx.txt
common/src/main/resources/shader/: blit.frag.glsl  blit.vert.glsl  copy.comp.glsl  copy.frag.glsl  copy.vert.glsl  depth_to_r16f.frag.glsl  preprocess_depth.frag.glsl  preprocess_depth.vert.glsl  rg16f_to_rgb.frag.glsl  rg16f_to_rgb.vert.glsl
common/src/main/resources/shader/dlssg/: depth_reproject_mv.comp.glsl  extract_ui.comp.glsl  mv_depth_upscale.comp.glsl  mv_dilate.comp.glsl
common/src/main/resources/shader/fsr2v221/: ffx_fsr2_accumulate_pass.ogl.glsl  ffx_fsr2_compute_luminance_pyramid_pass.ogl.glsl  ffx_fsr2_depth_clip_pass.ogl.glsl  ffx_fsr2_lock_pass.ogl.glsl  ffx_fsr2_rcas_pass.ogl.glsl  ffx_fsr2_reconstruct_previous_depth_pass.ogl.glsl
common/src/main/resources/shader/fsr2v221/include/: ffx_common_types.h  ffx_core.h  ffx_core_glsl.h  ffx_core_gpu_common.h  ffx_core_gpu_common_half.h  ffx_fsr1.h  ffx_fsr2_callbacks_glsl2.h  ffx_fsr2_compute_luminance_pyramid.h  ffx_fsr2_rcas.h  ffx_fsr2_upsample.h  ffx_spd.h
common/src/main/resources/shader/fsr2v233/: ffx_fsr2_accumulate_pass.glsl  ffx_fsr2_compute_luminance_pyramid_pass.glsl  ffx_fsr2_depth_clip_pass.glsl  ffx_fsr2_lock_pass.glsl  ffx_fsr2_rcas_pass.glsl  ffx_fsr2_reconstruct_previous_depth_pass.glsl
common/src/main/resources/shader/fsr2v233/include/: ffx_core.h  ffx_core_glsl.h  ffx_fsr2_accumulate.h  ffx_fsr2_callbacks_glsl.h  ffx_fsr2_compute_luminance_pyramid.h  ffx_fsr2_rcas.h  ffx_spd.h
common/src/main/resources/shader/gui_blur/: blur.frag.glsl  blur.vert.glsl
common/src/main/resources/shader/interop/: depth_preprocess.frag.glsl  flip_motion_vector_y.comp.glsl  flip_y.comp.glsl  motion_vector_preprocess.comp.glsl  process_input_textures.comp.glsl
common/src/main/resources/shader/nanovg/: nanovg_rhi.frag.glsl  nanovg_rhi.vert.glsl
common/src/shadercompat/resources/: mcdlssg.shadercompat.mixins.json
configs/: 1.20.1.json
forge/: build.gradle.kts
forge/src/main/resources/: mcdlssg-forge-compat.mixins.json  mcdlssg-forge.mixins.json
native/: build.gradle.kts
native/cpp/: CMakeLists.txt  License  build_android.ps1  build_linux.sh  build_windows.ps1  build_windows_docker.sh  build_windows_on_linux.sh  glslang-commit-hash  init.py
native/cpp/SRNativeMain/: CMakeLists.txt
native/cpp/SRNativeMain/include/: define.h  sr_api_jni.h  utils.h
native/cpp/SRNativeMain/include/nvg/: all.h  fontstash.h  gl_funcs.h  nanosvg.h  nanovg.h  nanovg_gl.h  stb_image.h  stb_truetype.h
native/cpp/SRNativeMain/include/sr/: sr_api.h  sr_api_enums.h  sr_api_functions.h  sr_api_structs.h  sr_api_types.h  sr_modules.h
native/cpp/SRNativeMain/src/: glslang.cpp  main.cpp  sr_api.cpp  sr_api_jni.cpp  utils.cpp
native/cpp/SRNativeMain/src/nvg/: all.cpp  gl_funcs.cpp  nanovg.cpp  nvg.frag.glsl.inc  nvg.vert.glsl.inc  nvg_jni.cpp
native/cpp/SRNativeNGX/: CMakeLists.txt
native/cpp/SRNativeNGX/src/: ngx_jni.cpp
native/cpp/SRNativeStreamline/: CMakeLists.txt
native/cpp/SRNativeStreamline/include/sr/streamline/: sr_provider.h  streamline.h
native/cpp/SRNativeStreamline/src/: streamline.cpp
native/cpp/SRNativeXeSS/: CMakeLists.txt  xess_sr_developer_guide_english.md
native/cpp/SRNativeXeSS/include/sr/xess/: sr_provider.h  xess.h
native/cpp/SRNativeXeSS/src/: sr_provider.cpp  xess.cpp
native/cpp/docker/: Dockerfile  entrypoint.sh  gen_vulkan_stub.sh
native/cpp/docs/: add_upscale_provider.md  build.md
script/: action_uploader.py  buildAll.py  consts.py  download_libraries.py  i18n_unused_key_finder.py  i18n_validator.py  uploadMcmod.py  uploader_mcmod.py  utils.py
(+630 files in other folders)
